<resources>
    <string name="app_name">xiangmu</string>
    <string name="shouye">首页</string>
    <string name="fenlei">分类</string>
    <string name="gouwuche">购物车</string>
    <string name="wode">我的</string>
    <string name="qiandao">每日签到</string>
    <string name="jifen">积分商城</string>
    <string name="duihuan">兑换专区</string>
    <string name="zhenwei">真伪查询</string>
    <string name="action_settings">Settings</string>
    <string name="xitongshezhi">系统设置</string>
    <string name="ji">积分</string>
    <string name="hb">红包</string>
    <string name="daijinjuan">代金券</string>
    <string name="chongzhika">充值卡</string>
    <string name="yucunkuan">预存款</string>
    <string name="wodecaichan">我的财产</string>
    <string name="tuihuo">退款/货</string>
    <string name="daipingjia">待评价</string>
    <string name="daishouhuo">待收货</string>
    <string name="daifahuo">待发货</string>
    <string name="weifukuan">未付款</string>
    <string name="shouhuodizhi">收货地址</string>
    <string name="quanbudingdan">全部订单</string>
    <string name="wodezuji">我的足迹</string>
    <string name="dianpu">店铺</string>
    <string name="shangpin">商品</string>


</resources>
