<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_weight="5"
        android:background="#FC4F02"
        android:orientation="vertical">
        <ImageView
            android:layout_weight="1"
            android:id="@+id/img"
            style="@style/WEIGHT"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@mipmap/ic_default_user_head" />
        <TextView
            android:layout_weight="1"
            android:id="@+id/uesr_tv"
            style="@style/WEIGHT"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="15910239709"
            android:textSize="20sp" />
        <LinearLayout
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFD85115"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/radio"
                    style="@style/LogGeren"
                    android:layout_gravity="center"
                    android:drawableTop="@mipmap/ic_collection_goods"
                    android:text="@string/shangpin"
                    />
                <RadioButton
                    android:id="@+id/radio1"
                    android:layout_gravity="center"
                    style="@style/LogGeren"
                    android:drawableTop="@mipmap/ic_collection_store"
                    android:text="@string/dianpu"
                    />
                <RadioButton
                    android:id="@+id/radio2"
                    style="@style/LogGeren"
                    android:layout_gravity="center"
                    android:drawableTop="@mipmap/ic_user_footprint"
                    android:text="@string/wodezuji"
                    />
            </RadioGroup>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:background="#fff"
        android:layout_weight="4"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_marginLeft="10dp"
                android:id="@+id/img1"
                style="@style/WEIGHT"
                android:background="@mipmap/ic_user_order"
                />
            <TextView
                android:layout_marginLeft="40dp"
                style="@style/WEIGHT"
                android:text="@string/quanbudingdan"
                />
            <ImageView
                style="@style/WEIGHT"
                android:background="@mipmap/ic_normal_dot_left"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                />
        </RelativeLayout>
        <RadioGroup
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RadioButton
                style="@style/LogGeren1"
                android:id="@+id/radiogeren1"
                android:drawableTop="@mipmap/ic_user_order_wait_pay"
                android:text="@string/weifukuan"
                />
            <RadioButton
                style="@style/LogGeren1"
                android:id="@+id/radiogeren2"
                android:drawableTop="@mipmap/ic_user_order_wait_drive"
                android:text="@string/daifahuo"

                />
            <RadioButton
                style="@style/LogGeren1"
                android:id="@+id/radiogeren3"
                android:drawableTop="@mipmap/ic_user_order_wait_receipt"
                android:text="@string/daishouhuo"

                />
            <RadioButton
                style="@style/LogGeren1"
                android:id="@+id/radiogeren4"
                android:drawableTop="@mipmap/ic_user_order_wait_comment"
                android:text="@string/daipingjia"

                />
            <RadioButton
                style="@style/LogGeren1"
                android:id="@+id/radiogeren5"
                android:drawableTop="@mipmap/ic_user_order_wait_refund"
                android:text="@string/tuihuo"
                />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="4"
        android:background="#fff"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <ImageView
                android:id="@+id/img2"
                style="@style/WEIGHT"
                android:layout_marginLeft="10dp"
                android:background="@mipmap/ic_user_property" />

            <TextView
                style="@style/WEIGHT"
                android:layout_marginLeft="40dp"
                android:text="@string/wodecaichan" />

            <ImageView
                style="@style/WEIGHT"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:background="@mipmap/ic_normal_dot_left" />
        </RelativeLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/radiogeren6"
                style="@style/LogGeren1"
                android:drawableTop="@mipmap/ic_user_property_money"
                android:text="@string/yucunkuan"
                />

            <RadioButton
                android:id="@+id/radiogeren7"
                android:drawableTop="@mipmap/ic_user_property_card"
                style="@style/LogGeren1"
                android:text="@string/chongzhika"
                />

            <RadioButton
                android:id="@+id/radiogeren8"
                style="@style/LogGeren1"
                android:drawableTop="@mipmap/ic_user_property_vouchers"
                android:text="@string/daijinjuan"
                />

            <RadioButton
                android:id="@+id/radiogeren9"
                style="@style/LogGeren1"
                android:drawableTop="@mipmap/ic_user_property_red"
                android:text="@string/hb"
                />
            <RadioButton
                android:id="@+id/radiogeren10"
                style="@style/LogGeren1"
                android:layout_weight="1"
                android:drawableTop="@mipmap/ic_user_property_integral"
                android:text="@string/ji"
                />
        </RadioGroup>

    </LinearLayout>

    <RelativeLayout
        android:background="#fff"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <ImageView
            android:layout_marginTop="5dp"
            android:id="@+id/img3"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/tv1"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shouhuodizhi"
            android:layout_marginLeft="40dp"
            />
        <ImageView
            android:layout_marginTop="5dp"
            style="@style/WEIGHT"
            android:background="@mipmap/ic_normal_dot_left"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            />

    </RelativeLayout>
    <RelativeLayout
        android:layout_marginTop="2dp"
        android:background="#fff"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <ImageView
            android:id="@+id/img4"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            style="@style/WEIGHT"
            />
        <TextView
            android:id="@+id/tv2"
            android:layout_marginTop="5dp"
            style="@style/WEIGHT"
            android:text="@string/xitongshezhi"
            android:layout_marginLeft="40dp"
            />
        <ImageView
            style="@style/WEIGHT"
            android:layout_marginTop="5dp"
            android:background="@mipmap/ic_normal_dot_left"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            />
    </RelativeLayout>
</LinearLayout>
